[MVT] TestMinimalValueTypes fails with ClassCastException

XMLWordPrintable

      compiler/valhalla/valuetypes/TestMinimalValueTypes.java

      Exception in thread "main" java.lang.reflect.InvocationTargetException
      at jdk.internal.reflect.GeneratedMethodAccessor1.invoke(Unknown Source)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:564)
      at compiler.valhalla.valuetypes.ValueTypeTest.run(ValueTypeTest.java:366)
      at compiler.valhalla.valuetypes.ValueTypeTest.run(ValueTypeTest.java:182)
      at compiler.valhalla.valuetypes.TestMinimalValueTypes.main(TestMinimalValueTypes.java:248)
      Caused by: java.lang.ClassCastException

            Assignee:
            Tobias Hartmann
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: