8190935: [MVT] TestMinimalValueTypes fails with ClassCastException

Reviewed-by: roland